2001-04-15  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: Look for getclock().

	* ntpd/ntp_config.c (getconfig): Squawk if provided minpoll or
	maxpoll values are out of range.

	* ntpd/ntp_proto.c (poll_update): Some operations can only be done
	if we're compiling with some REFCLOCKs.
	From Dave Mills.

	* configure.in (RSASRCS): Added.
	* librsaref/Makefile.am (nodist_librsaref_a_SOURCES): Use RSASRCS.

	* configure.in: Limit the DECL_HSTRERROR_0 to aix4.3.*.  RSN, we
	could also limit it to xlc...

	* configure.in: 4.0.99k25

	* html/leap.htm: Added.
	* html/index.htm: Update.
	* html/driver7.htm: Update.
	* html/driver6.htm: Update.
	* html/driver36.htm: Update.
	* html/audio.htm: Update.
	* html/y2k.htm: Removed.
	From Dave Mills.

2001-04-14  Harlan Stenn  <stenn@whimsy.udel.edu>

	* acconfig.h: Lose extra declarations of PACKAGE and VERSION.

	* acconfig.h: 
	* configure.in:
	* include/l_stdlib.h: DECL_HSTRERROR_0 needed for xlc under AIX 4.3.2.
	Reported by: Harald Barth <haba@pdc.kth.se>

	* ntpd/ntp_proto.c (proto_config): cal_enable (PROTO_CAL) is
	invalid if no refclocks are present.
	From: Frodo Looijaard <frodol@dds.nl>

	* README.cvs: On some systems, the -C option fails.

	* ntpd/refclock_nmea.c:
	* ntpd/ntp_refclock.c:
	* html/driver20.htm:
	PPSAPI patches for NMEA driver.
	From: John.Hay@icomtek.csir.co.za

        * README.rsa: Describe RSAEuro support, provide alternate rsa.c 
	patch. 
	* configure.in: Check for rsaeuro1, RSAOBJS, RSADIR respectively. 
	* html/build.htm: Hint at rsaeuro1 directory. 
	* include/global.h (BYTE): Define. 
	* librsaref/Makefile.am (nodist_librsaref_a_SOURCES): Removed rsaref2 
	specific sources. 
	(librsaref_a_LIBADD): Add appropriate objects. 
	(librsaref_a_DEPENDENCIES): Work around automake limitation. 
	(stamp-rsaref): Use RSADIR. 
	* scripts/README: Document ntp-close. 
	* scripts/Makefile.am (EXTRA_DIST): Distribute it. 
	* Makefile.am (DISTCLEANFILES): Remove .warning.